feat: enhance OpenAI integration with structured properties for text and image generation