@@ -28,32 +28,28 @@ import java.util.Objects;
  * @author Meditation Builder Team
  */
 import com.hexagonal.meditationbuilder.infrastructure.config.AiProperties;
+import com.hexagonal.meditationbuilder.infrastructure.config.OpenAiProperties;
 
 public class ImageGenerationAiAdapter implements ImageGenerationPort {
 
     private static final Logger log = LoggerFactory.getLogger(ImageGenerationAiAdapter.class);
 
-    private static final String DEFAULT_SIZE = "1024x1024";
-    private static final String DEFAULT_QUALITY = "standard";
-    private static final int DEFAULT_N = 1;
-
     private final RestClient restClient;
     private final String baseUrl;
     private final String apiKey;
     private final AiProperties aiProperties;
+    private final OpenAiProperties openAiProperties; // <-- añade esta dependencia
 
-    /**
-     * Constructor with RestClient, base URL, and API key.
-     * 
-     * @param restClient configured RestClient instance
-     * @param baseUrl base URL of the AI image generation service
-     * @param apiKey API key for authentication
-     */
-    public ImageGenerationAiAdapter(RestClient restClient, String baseUrl, String apiKey, AiProperties aiProperties) {
+    public ImageGenerationAiAdapter(RestClient restClient,
+                                    String baseUrl,
+                                    String apiKey,
+                                    AiProperties aiProperties,
+                                    OpenAiProperties openAiProperties) {
         this.restClient = Objects.requireNonNull(restClient, "restClient is required");
         this.baseUrl = Objects.requireNonNull(baseUrl, "baseUrl is required");
         this.apiKey = Objects.requireNonNull(apiKey, "apiKey is required");
         this.aiProperties = Objects.requireNonNull(aiProperties, "aiProperties is required");
+        this.openAiProperties = Objects.requireNonNull(openAiProperties, "openAiProperties is required");
     }
 
     @Override
@@ -61,43 +57,59 @@ public class ImageGenerationAiAdapter implements ImageGenerationPort {
         if (prompt == null || prompt.isBlank()) {
             throw new IllegalArgumentException("prompt is required");
         }
-        // Prepend metaprompt if present
+
+        // Metaprompt
         String metaprompt = aiProperties.getImageMetaprompt();
         String finalPrompt = (metaprompt != null && !metaprompt.isBlank())
                 ? metaprompt + "\n" + prompt
                 : prompt;
 
-        log.debug("Initiating AI image generation request");
+        // Lee configuración de imagen
+        var imgCfg = openAiProperties.getImage();
+        String model = imgCfg.getModel();                    // p.ej. gpt-image-1-mini
+        String size = defaultIfBlank(imgCfg.getSize(), "1024x1024");
+        String quality = defaultIfBlank(imgCfg.getQuality(), "low"); // u "standard" si usas DALL·E
+        String responseFormat = defaultIfBlank(imgCfg.getResponseFormat(), "url");
+        Integer n = imgCfg.getN() != null ? imgCfg.getN() : 1;
+
+        log.debug("Initiating AI image generation request (model={}, size={}, quality={}, format={})",
+                model, size, quality, responseFormat);
 
         AiImageRequest request = new AiImageRequest(
-            finalPrompt,
-            DEFAULT_N,
-            DEFAULT_SIZE,
-            DEFAULT_QUALITY
+                model,
+                finalPrompt,
+                n,
+                size,
+                quality,
+                responseFormat
         );
 
         try {
-            AiImageResponse response = restClient
+                AiImageResponse response = restClient
                     .post()
-                    .uri(baseUrl + "/v1/images/generations")
+                    // Recomendado: "/v1/images" (nuevo). Si usas legacy DALL·E: "/v1/images/generations"
+                    .uri(baseUrl + "/v1/images")
                     .header("Authorization", "Bearer " + apiKey)
                     .header("Content-Type", "application/json")
+                    .header("Accept", "application/json")
                     .body(request)
                     .retrieve()
                     .onStatus(HttpStatusCode::is4xxClientError, (req, res) -> {
-                        if (res.getStatusCode().value() == 429) {
+                        int code = res.getStatusCode().value();
+                        if (code == 401 || code == 403) {
+                            log.error("Unauthorized/Forbidden from image API: {}", code);
+                            throw new ImageGenerationServiceException("Auth failed against image API.");
+                        }
+                        if (code == 429) {
                             log.warn("AI image service rate limit exceeded");
-                            throw new ImageGenerationServiceException(
-                                    "AI service rate limit exceeded. Please try again later.");
+                            throw new ImageGenerationServiceException("Rate limit exceeded. Try again later.");
                         }
                         log.error("AI image service client error: {}", res.getStatusCode());
-                        throw new ImageGenerationServiceException(
-                                "AI service request failed: " + res.getStatusCode());
+                        throw new ImageGenerationServiceException("Image API request failed: " + res.getStatusCode());
                     })
                     .onStatus(HttpStatusCode::is5xxServerError, (req, res) -> {
                         log.error("AI image service unavailable: {}", res.getStatusCode());
-                        throw new ImageGenerationServiceException(
-                                "AI service unavailable. Please try again later.");
+                        throw new ImageGenerationServiceException("Image API unavailable. Please try again later.");
                     })
                     .body(AiImageResponse.class);
 
@@ -106,21 +118,40 @@ public class ImageGenerationAiAdapter implements ImageGenerationPort {
                 throw new ImageGenerationServiceException("AI service returned empty response");
             }
 
-            AiImageResponse.ImageData imageData = response.data().getFirst();
-            String imageUrl = imageData.url();
+            AiImageResponse.ImageData imageData = response.data().get(0);
 
-            if (imageUrl == null || imageUrl.isBlank()) {
+            // Soporta URL o base64
+            String imageUrl = imageData.url();
+            String b64 = imageData.b64Json();
+
+            if (("url".equalsIgnoreCase(responseFormat) || imageUrl != null) && (imageUrl == null || imageUrl.isBlank())) {
                 log.error("AI image service returned blank URL");
                 throw new ImageGenerationServiceException("AI service returned blank image URL");
             }
 
-            log.debug("AI image generation completed successfully");
+            if ("b64_json".equalsIgnoreCase(responseFormat)) {
+                if (b64 == null || b64.isBlank()) {
+                    log.error("AI image service returned blank base64");
+                    throw new ImageGenerationServiceException("AI service returned blank base64 image");
+                }
+                // Si tu dominio trabaja con URL, puedes subir el b64 a tu storage y devolver su URL.
+                // De momento, devuelvo un pseudo-URL con esquema data: para que funcione de extremo a extremo.
+                String dataUrl = "data:image/png;base64," + b64;
+                log.debug("AI image generation completed successfully (base64)");
+                return new ImageReference(dataUrl);
+            }
+
+            log.debug("AI image generation completed successfully (url)");
             return new ImageReference(imageUrl);
 
         } catch (RestClientException e) {
             log.error("Network error during AI image generation");
             throw new ImageGenerationServiceException(
-                    "Failed to communicate with AI service: " + e.getMessage(), e);
+                    "Failed to communicate with AI image service: " + e.getMessage(), e);
         }
+    }
+
+    private static String defaultIfBlank(String val, String def) {
+        return (val == null || val.isBlank()) ? def : val;
     }
 }
